--- a/requirements.txt
+++ b/requirements.txt
@@ -61,7 +61,6 @@ multidict==6.0.4
 mypy-extensions==1.0.0
 numexpr==2.8.7
 numpy==1.26.0
-open-interpreter==0.1.6
 openai==0.28.1
 packaging==23.2
 pandas==2.1.1
@@ -133,3 +132,4 @@ yarl==1.9.2
 yaspin==3.0.1
 zipp==3.17.0
 loguru
+open-interpreter
