--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ GitPython==3.1.37
 glom==22.1.0
 greenlet==2.0.2
 htbuilder==0.6.2
+huggingface-hub==0.16.4
 idna==3.4
 importlib-metadata==6.8.0
 inquirer==3.1.3
@@ -60,6 +61,7 @@ multidict==6.0.4
 mypy-extensions==1.0.0
 numexpr==2.8.7
 numpy==1.26.0
+open-interpreter==0.1.6
 openai==0.28.1
 packaging==23.2
 pandas==2.1.1
@@ -131,4 +133,3 @@ yarl==1.9.2
 yaspin==3.0.1
 zipp==3.17.0
 loguru
-open-interpreter>=0.1.10
