--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Github Config
 .github_access_token
 
 # DB and uuid
@@ -62,6 +63,9 @@ coverage.xml
 .hypothesis/
 .pytest_cache/
 cover/
+
+# Testing
+test.ipynb
 
 # Translations
 *.mo
